--- a/server/build.gradle
+++ b/server/build.gradle
@@ -10,6 +10,11 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven {
+        /*个推*/
+        name "getui-nexus"
+        url "http://mvn.gt.igexin.com/nexus/content/repositories/releases/"
+    }
 }
 
 dependencies {
