--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -12,9 +12,9 @@ android {
 
         //个推相关参数
         manifestPlaceholders = [
-                GETUI_APP_ID    : "Rr51sROK4B8FXbq0TUjAF5",
-                GETUI_APP_KEY   : "eurxTdqHECAKgc7s4xtUe9",
-                GETUI_APP_SECRET: "wvAHiSQwuJ79Fp1tBy8Td8",
+                GETUI_APP_ID    : "q0n9Atnmz87sC2gUpGxWf5",
+                GETUI_APP_KEY   : "9CV01DPKKF8lWaOJqByx43",
+                GETUI_APP_SECRET: "gcRDJKwDiR7NfKt8ZCQAZ1",
                 PACKAGE_NAME    : applicationId
         ]
 
